<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fon"
    tools:context=".ShopFragment">

    <ImageButton
        android:id="@+id/ib_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ice_margin"
        android:layout_marginTop="@dimen/ice_margin"
        android:background="@null"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/ice_margin"
        android:fontFamily="@font/myfont"
        android:gravity="center"
        android:shadowColor="#1936C8"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="50"
        android:text="@string/shop"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_attempts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/ice_margin"
        android:layout_marginTop="@dimen/ice_margin"
        android:fontFamily="@font/myfont"
        android:gravity="center"
        android:shadowColor="#1936C8"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="50"
        android:text="@string/main_menu"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_shop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_buy"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginHorizontal="@dimen/ice_margin"
        android:background="@mipmap/frdiamond"
        android:fontFamily="@font/myfont"
        android:text="@string/buy_attempt"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/switch_easy_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_easy_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/icy_medium_margin"
        android:fontFamily="@font/myfont"
        android:text="@string/increase_chance_by_10"
        android:textColor="@color/teal_200"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_points"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:src="@mipmap/point_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attempts" />

    <TextView
        android:id="@+id/tv_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myfont"
        android:gravity="center"
        android:shadowColor="#1936C8"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="50"
        android:text="@string/_0"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_points"
        app:layout_constraintEnd_toStartOf="@+id/iv_points"
        app:layout_constraintTop_toTopOf="@+id/iv_points" />

</androidx.constraintlayout.widget.ConstraintLayout>