<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/fon"
    tools:context=".RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="@font/myfont"
        android:layout_marginTop="@dimen/ice_margin"
        android:text="@string/please_enter_your_name_maximum_8_character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icy_medium_margin"
        app:layout_constraintTop_toBottomOf="@+id/tv_reg"
        android:layout_marginTop="@dimen/icy_large_margin"
        android:maxLength="8"
        app:boxBackgroundColor="@color/teal_700"
        android:layout_marginEnd="@dimen/icy_medium_margin"
        android:hint="@string/name">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reg"
            android:maxLength="8"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:fontFamily="@font/myfont"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@mipmap/star_image"
        android:layout_marginBottom="@dimen/icy_medium_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit"
        android:textSize="25sp"
        android:fontFamily="@font/myfont"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>